css/civicrm.css
/* $Id$ */


#crm-container label {
    font-weight: normal;
    display: inline;
}

#crm-container .hiddenElement {
    display   	    : none;
}

#crm-container .clear {
    clear 	    : both;
}

#crm-container a,
#crm-container a:link {
    color:#2786c2;
    text-decoration: none;
}

#crm-container .crm-content-block {padding: 4px;}

#crm-container .crm-content-block .crm-content-block {padding:0px;}
/* TABLE STYLING */

#crm-container table {
    margin: 0em .1em 1em;
    border-collapse: collapse;
}


#crm-container th, 
#crm-container table.display thead th, 
#crm-container table thead.sticky th, 
#crm-container table.caseSelector tr.columnheader th {
    background-color:#FFFFFF;
    border-color:#FFFFFF #FFFFFF #CFCEC3;
    border-style:solid;
    border-width:1px 1px 2px;
    color:#A7A7A7;
    font-size:12px;
    font-weight:bold;
    padding:4px;
    text-align:left;
    vertical-align:top;
}	
/* Styles for Sticky Header */
#crm-container table thead.sticky {background-color:#FFF;}
#crm-container thead div.sticky-header {
    height: 15px;
    border-bottom:2px solid #CFCEC3;
    background-color:#FFF;
    z-index: 10;
}

/* Styles for Sorting Header */
#crm-container table.display thead th.sorting_asc, 
#crm-container table.display thead th.sorting_desc,
#crm-container table .sticky th a.sort-ascending,
#crm-container table .sticky th a.sort-descending,
#crm-container table.caseSelector tr.columnheader th a.sort-ascending,
#crm-container table.caseSelector tr.columnheader th a.sort-descending {
    color:#3e3e3e;
    background-color: #FFF;
}
/*  DataTables sorting */
.sorting, 
.sorting_asc, 
.sorting_desc {
    padding-left:16px !important;
    background: url('../i/dataTable/sort_sprites.png') no-repeat left 0px;
}
.sorting {
    background-position:0px 5px;
}
.sorting_desc {
    background-position:0px -59px;
}
.sorting_asc {
    background-position:0px -27px;
}
a.sorting {
    background-position:0px 1px;
}
a.sorting_desc {
    background-position:0px -64px;
}
a.sorting_asc {
    background-position:0px -31px;
}

/* Set background back to normal gray for form labels which use <th>. Temporary fix until we standardize form layout markup. */
#crm-container table.form-layout-compressed tbody th.label { background-color: #F7F7F7; }

#crm-container tbody{
    border-top: none
}

#crm-container tr {
    font-size: .95em;
}

#crm-container td {
    padding: 4px;
    vertical-align: top;
}

#crm-container tr.even-row td, 
#crm-container tr.odd-row td,
#crm-container table.display td,
#crm-container table.pagerDisplay td {
    border-collapse: collapse;
}

#crm-container .row-selected {
    margin: 0px;
    padding: 3px 0px 3px 0px;
    clear: none;
}

#crm-container .row-highlighted {
    margin: 0px;
    padding: 3px 0px 3px 0px;
    clear: none;
    background-color: #FAFAD2;
}



/*
** Size input fields in crm-container by class. Classes are assigned by the
** module in relation to the data object max size.
*/
#crm-container .two {width: 2em;}
#crm-container .four {width: 4em;}
#crm-container .six {width: 6em;}
#crm-container .eight {width: 8em;}
#crm-container .twelve {width: 12em;}
#crm-container .twenty {width: 20em;}
#crm-container .medium {width: 12em;}
#crm-container .big {width: 15em;}
#crm-container .huge {width: 25em;}
#crm-container .huge40 {width: 40em;}
#crm-container textarea.big {width: 35em; height: 4em;}
#crm-container textarea.huge {width: 45em; height: 16em;}
#crm-container textarea.huge12 {width: 40em; height: 12em;}
#crm-container textarea.huge40 {width: 40em; height: 16em;}
#crm-container textarea.nowrap {width: 45em; height: 4.5em; white-space: nowrap; overflow: auto;}
#crm-container .bigSelect {width: 15em; height: 12em;}


/*
** Override line-height from style.css
*/
div#crm-container {
    line-height: 135%;
}

/* Base #crm-container styles */

#crm-container hr {
    background-color : #B0B0B0;
}

#crm-container select {
    vertical-align: middle;
    border: 1px solid #999;
}


.crm-form-block {
    padding:4px;
    margin-bottom:4px;
    font-size:12px;
}


/* crm advanced select styling */

.crmasmContainer,
.crmasmSelect {
    width:200px;
}

.crmasmSelect {
    padding:2px;	
}

.crmasmSelect .child-1 { padding-left:1em; }
.crmasmSelect .child-2 { padding-left:2em; }

.crmasmHighlight {
    display:block;
    padding:2px 4px;
    background-color:#EEF4B8;
}

.crmasmList {
    margin:0px;
    padding:0px;
}

.crmasmList li {
    background-color:#3E3E3E;
    padding:2px 4px;
    list-style-type:none;
    margin:1px 0px;
    color:#F5F6F1;
}

.crmasmListItem {
    position:relative;
}
.crmasmListItemRemove {
    padding:5px;
    position:absolute;
    right:5px;
    top:2px;
    font-size:11px;
    margin:0px;
    padding:0px;
}


#crm-container textarea {
    border: 1px solid #999;
}


/*
** class for hiding the text box; it is used in the OtherActivity template 
** for showing the descrition of activity type element.
*/
#crm-container .texttolabel, #crm-container .no-border {
    border-style: none;
}

/*
** Class for giving solid line at the bottom of the <div>(block level element)
** Currently it is used on the dashboard pages - CiviContribute, CiviMember...
*/
#crm-container div.solid-border-bottom {
    border-bottom: 2px solid #777;
}

#crm-container div.solid-border-top {
    margin-top: 15px;
    border-top: 1px solid #696969;
}

/*
** Size the verticle heights in crm-containers by class. 
*/
#crm-container .ht-one {
    height: 1em;
}

#crm-container .ht-two {
    height: 2em;
}

#crm-container .add-remove-link, #crm-container .map-link, #crm-container .font-small {
    font-size: .9em;
}


/*
** CRM form layout classes (from www.realworldstyle.com)
*/
div.spacer, 
.spacer {
    clear: left;
    height: 5px;
}



#crm-container td.compressed select, 
#crm-container td.compressed input {
    font-size: 0.90em;
    font-weight: bold;
}
/* ... */

